--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- ABOUT Section -->
     <section id="about">
       <div class="container">
-        <div class="about-content">
+        <div class="about-content sec-grid">
           <div class="about-info">
             <h2 class="vertical-title">THE STORY</h2>
             <div class="about-detail">
@@ -88,7 +88,7 @@
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat.
               </p>
-              <button class="btn-general">DETAIL</button>
+              <button class="btn-general btn-light">DETAIL</button>
             </div>
           </div>
           <div class="about-image">
@@ -102,18 +102,18 @@
 
     <!-- Services Section -->
 
-    <section id="services">
+    <section id="services" class="pri-background">
       <div class="container">
-        <div class="services-content">
+        <div class="services-content sec-grid">
           <div class="services-image">
             <img src="./img/services.jpg" />
           </div>
           <div class="services-info">
-            <h2 class="vertical-title">THE SKILLS</h2>
+            <h2 class="vertical-title vertical-title-right">THE SKILLS</h2>
             <div class="services-detail">
               <div id="services-slider">
                 <div class="services-slide services-slide-1">
-                  <h2 class="horizontal-title">OUR SERVICE 1</h2>
+                  <h2 class="horizontal-title light-color">OUR SERVICE 1</h2>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
@@ -122,7 +122,7 @@
                   </p>
                 </div>
                 <div class="services-slide services-slide-2">
-                  <h2 class="horizontal-title">OUR SERVICE 2</h2>
+                  <h2 class="horizontal-title light-color">OUR SERVICE 2</h2>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do eiusmod tempor incididunt ut labore et dolore magna
@@ -132,8 +132,8 @@
                 </div>
               </div>
               <div class="btn-arrows">
-                <div id="arrow-left" class="btn-general">&#60;</div>
-                <div id="arrow-right" class="btn-general">&#62;</div>
+                <div id="arrow-left" class="btn-general btn-dark">&#60;</div>
+                <div id="arrow-right" class="btn-general btn-dark">&#62;</div>
               </div>
             </div>
           </div>
@@ -150,35 +150,35 @@
         <a
           href="./img/portfolio-item-1.jpg"
           class="portfolio-item portfolio-item-1"
-        ></a>
+        ><span>&#9741;</span></a>
         <a
           href="./img/portfolio-item-2.jpg"
           class="portfolio-item portfolio-item-2"
-        ></a>
+        ><span>&#9741;</span></a>
         <a
           href="./img/portfolio-item-3.jpg"
           class="portfolio-item portfolio-item-3"
-        ></a>
+        ><span>&#9741;</span></a>
         <a
           href="./img/portfolio-item-4.jpg"
           class="portfolio-item portfolio-item-4"
-        ></a>
+        ><span>&#9741;</span></a>
         <a
           href="./img/portfolio-item-5.jpg"
           class="portfolio-item portfolio-item-5"
-        ></a>
+        ><span>&#9741;</span></a>
         <a
           href="./img/portfolio-item-6.jpg"
           class="portfolio-item portfolio-item-6"
-        ></a>
+        ><span>&#9741;</span></a>
         <a
           href="./img/portfolio-item-7.jpg"
           class="portfolio-item portfolio-item-7"
-        ></a>
+        ><span>&#9741;</span></a>
         <a
           href="./img/portfolio-item-8.jpg"
           class="portfolio-item portfolio-item-8"
-        ></a>
+        ><span>&#9741;</span></a>
       </div>
     </section>
 
@@ -188,7 +188,7 @@
 
     <section id="team">
       <div class="container">
-        <div class="team-content">
+        <div class="team-content sec-grid">
           <div class="team-info">
             <h2 class="vertical-title">THE TEAM</h2>
             <div class="team-detail">
@@ -199,7 +199,7 @@
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat.
               </p>
-              <button class="btn-general">DETAIL</button>
+              <button class="btn-general btn-light">DETAIL</button>
           </div>
           <div class="team-items">
             <div class="team-item team-item-1">
@@ -239,9 +239,9 @@
     <!-- END Team Section -->
 
     <!-- BLOG Section -->
-    <section id="blog">
+    <section id="blog" class="pri-background">
       <div class="container">
-        <div class="blog-content">
+        <div class="blog-content sec-grid">
           <div class="latest-posts">
             <div class="blog-post">
               <h4>Post Title 1</h4>
@@ -271,9 +271,9 @@
             </div>
           </div>
           <div class="blog-info">
-            <h2 class="vertical-title">THE BLOG</h2>
+            <h2 class="vertical-title vertical-title-right">THE BLOG</h2>
             <div class="blog-detail">
-              <h2 class="horizontal-title">FROM US</h2>
+              <h2 class="horizontal-title light-color">FROM US</h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
